--- a/src/LandingPage/Style/LandingPage.css
+++ b/src/LandingPage/Style/LandingPage.css
@@ -377,3 +377,18 @@ body{
     align-items: center;
     flex-wrap: wrap;
 }
+.Loading, .NoData{
+    font-size: large;
+    font-weight: 500;
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.Loading img{
+    max-width: 75px;
+    min-width: 30px;
+}
+.NoData img{
+    max-width: 320px;
+    min-width: 30px;
+}
