--- a/src/LandingPage/Style/LandingPageFooter.css
+++ b/src/LandingPage/Style/LandingPageFooter.css
@@ -12,10 +12,10 @@
     color: #ffffff; 
 }
 .FooterLeftAddress{
-    color: #dedede;
+    color: #A6A6B3;
 }
 .FooterLeftCopyRights{
-    color: #dedede;
+    color: #A6A6B3;
 }
 .LandingPageFooterMiddle{
     display: flex;
