--- a/src/LandingPage/Style/ChatBot.css
+++ b/src/LandingPage/Style/ChatBot.css
@@ -2,19 +2,23 @@
     position: fixed;
     bottom: 25px;
     right: 25px;
-    width: 50px;
+    width: 55px;
     height: 50px;
 }
-.Chat{
+.ChatbotIcon:hover{
+    cursor: pointer;
+}
+.ChatVisible{
     position: fixed;
     right: 80px;
     bottom: 60px;
-    width: 120px;
-    height: 40px;
-    padding: 7px;
+    max-width: 120px;
+    padding: 5px;
     background-color: #fa1e74;
-    border-radius: 15px;
+    border-radius: 10px;
     border: none;
     color: white;
+}
+.ChatInvisible{
     display: none;
 }
