--- a/src/LandingPage/Style/LandingPage.css
+++ b/src/LandingPage/Style/LandingPage.css
@@ -21,16 +21,6 @@ body{
     body .LandingPageBodyType{
         font-size: 18px;
     }
-    /* body .LandingPageHeader{
-        width: 100%;
-        min-height: 70px;
-        max-height: 80px;
-    }
-    body .LandingPageHeaderText h1{
-        padding-left: 0%;
-        font-size: 25px;
-        text-align: center;
-    } */
     body .AddToCardAndVisitWebsiteInnerDiv{
         width: 45%;
     }
@@ -44,17 +34,6 @@ body{
     flex-direction: column;
     width: 100%;
 }
-/* .LandingPageHeader{
-    width: 100%;
-    min-height: 100px;
-    height: 10vh;
-    background-color: #fa1e74;
-}
-.LandingPageHeaderText h1{
-    color: #ffffff;
-    font-size: 35px;
-    padding-left: 6%;
-} */
 .LandingPageBody{
     width: 100%;
     display: flex;
@@ -69,8 +48,9 @@ body{
     }
 }
 .LandingPageBodyLeft{
-    width: 50ch;
+    width: 60ch;
     display: flex;
+    justify-content: space-around;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -111,19 +91,13 @@ body{
 }
 .LandingPageBodyImage{
     max-width: 470px;
-    min-width: 100px;
+    min-width: 90px;
 }
 .LandingPageBodyIcon{
     width: 100%;
     height: 100%;
-    max-height: 700px;
+    max-height: 550px;
     border-radius: 10px; 
-}
-.LandingPageBodyColor{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
 }
 .LandingPageBodyColorHeadInvisible{
     font-size: 20px;
@@ -134,12 +108,11 @@ body{
     margin-right: 17px;
 }
 .LandingPageBodyRight{
-    width: 50ch;
+    width: 60ch;
     display: flex;
     flex-direction: column;
     padding-left: 20px;
     padding-right: 20px;
-    margin-top: 20px;
 }@media (max-width: 350px){
     .LandingPageBodyRight{
         min-width: 240px;
@@ -154,37 +127,71 @@ body{
     font-size: 18px;
     padding-top: 8px;
     padding-bottom: 8px;
-    font-weight: 600;
+    font-weight: 400;
 }
 .LandingPageBodyType{
     font-size: 22px;
     padding-top: 8px;
     padding-bottom: 8px;
-    font-weight: 400;
+    font-weight: 300;
 }
 .LandingPageBodyPrize{
+    display: flex;
+    min-width: 190px;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+}
+@media (max-width: 500px){
+    .LandingPageBodyPrize{
+        flex-direction: column-reverse;
+        min-width: 100px;
+        max-width: 120px;
+    }
+}
+.LandingPageBodyPrizeNew{
     min-width: 100px;
-    text-align: right;
-    font-size: 22px;
+    text-align: center;
+    font-size: 20px;
     color: #fa1e74;
     font-weight: bolder;
 }
-.LandingPageBodyRating{
+.LandingPageBodyPrizeOld{
+    min-width: 80px;
+    text-align: center;
+    font-size: 14px;
+    color: #747474;
+    align-items: center;
+    padding-left: 1px;
+    padding-top: 5px;
+    text-decoration: line-through;
+}
+.LandingPageBodyRatingMobile, .LandingPageBodyRatingWeb{
     padding-top: 8px;
     padding-bottom: 8px;
+    width: 110px;
+    display: flex;
+    justify-content: space-between;
 }
-.LandingPageBodyRating span{
-    margin-right: 6px;
+@media (min-width: 500px){
+    .LandingPageBodyRatingMobile{
+        display: none;
+    }
 }
-.LandingPageBodyRating .checked{
+@media (max-width: 500px){
+    .LandingPageBodyRatingWeb{
+        display: none;
+    }
+}
+.LandingPageBodyRatingMobile .checked, .LandingPageBodyRatingWeb .checked{
     color: #fa1e74;
 }
-.LandingPageBodyRating .unchecked{
+.LandingPageBodyRatingMobile .unchecked, .LandingPageBodyRatingWeb .unchecked{
     color: rgb(184, 182, 182);
 }
 .LandingPageBodyDiscription{
     margin-top: 8px;
     margin-bottom: 8px;
+    color: #a0a0a0;
 }
 .LandingPageBodyGeneralQuestion{
     margin-top: 5px;
@@ -200,10 +207,11 @@ body{
 }
 .LandingPageBodyTagMap{
     background-color: #626262;
+    font-size: 14px;
     color: white;
     text-align: center;
     width: auto;
-    padding: 2px 10px 2px 10px;
+    padding: 2px 12px 2px 12px;
     margin: 4px 20px 4px 0px;
     height: auto;
     max-height: 100px;
@@ -211,11 +219,11 @@ body{
 }
 .LandingPageBodySizeHead{
     margin-top: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-size: 22px;
 }
 .LandingPageBodySize{
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 10px;
     display: flex;
 }
@@ -340,52 +348,6 @@ body{
     color: white;
     cursor: pointer;
 }
-/* .LandingPageFooter{
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #626262;
-    justify-content: space-between;
-    padding: 10px;
-}
-.LandingPageFooterLeft{
-    margin: 20px;
-}
-.FooterLeftName{
-    color: #ffffff; 
-}
-.FooterLeftAddress{
-    color: #dedede;
-}
-.FooterLeftCopyRights{
-    color: #dedede;
-}
-.LandingPageFooterMiddle{
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-}
-.FooterMiddleHref{
-    color: #ffffff;
-    text-decoration: none;
-}
-.LandingPageFooterRight{
-    margin: 20px;
-    padding-right: 40px;
-}
-.FooterRightIcon{
-    width: 30px;
-    height: auto;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-@media (max-width: 300px){
-    .FooterRightIcon{
-        width: 24px;
-    }
-}
-.FooterRightIcon:hover{
-    cursor: pointer;
-} */
 .Flex{
     display: flex;
     justify-content: space-between;
