--- a/src/LandingPage/Style/LandingPageHeader.css
+++ b/src/LandingPage/Style/LandingPageHeader.css
@@ -7,6 +7,7 @@
 .LandingPageHeaderText h1{
     color: #ffffff;
     font-size: 35px;
+    font-weight: 400;
     padding-left: 6%;
 }
 @media (max-width: 500px){
